Task BJS2-68215 Удалена переменная MAX_AGE. Изменен метод validateAge,  чтобы он проверял только, что возраст не меньше MIN_AGE (18 лет). Константы VALID_JOBS и VALID_ADDRESSES теперь инициализируются через Set.of(). Добавлена аннотация @ToString. Переписаны  логи в метода. Создание списка пользователей теперь использует List.of()