@@ -3,20 +3,18 @@ package school.faang.bjs2_68215;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
+import lombok.ToString;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 @Slf4j
 @Getter
 @Setter
+@ToString
 public class User {
-
-    private static final Set<String> VALID_JOBS = new HashSet<>(Arrays.asList("Google", "Uber", "Amazon", "Amazon"));
-    private static final Set<String> VALID_ADDRESSES = new HashSet<>(Arrays.asList("London", "New York", "Amsterdam"));
+    private static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
+    private static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
     private static final int MIN_AGE = 18;
-    private static final int MAX_AGE = 99;
 
     private final String name;
     private final int age;
@@ -36,34 +34,29 @@ public class User {
 
     private void validateName(String name) {
         if (name == null || name.isEmpty()) {
-            log.error("Invalid name provided: {}", name + " It must not be null or empty.");
+            log.error("Invalid name provided: {}  It must not be null or empty.", name);
             throw new IllegalArgumentException("Invalid name");
         }
     }
 
     private void validateAge(int age) {
-        if (age < MIN_AGE || age > MAX_AGE) {
-            log.error("Invalid age provided: {}", age + " It must be between " + MIN_AGE + " and " + MAX_AGE + ".");
+        if (age < MIN_AGE) {
+            log.error("Invalid age provided: {} It must be at least {}.", age, MIN_AGE);
             throw new IllegalArgumentException("Invalid age");
         }
     }
 
     private void validateJob(String job) {
         if (!VALID_JOBS.contains(job)) {
-            log.error("Invalid job provided: {}", job + " It must be one of the following: " + VALID_JOBS);
+            log.error("Invalid job provided: {} It must be one of the following: {}", job, VALID_JOBS);
             throw new IllegalArgumentException("Invalid job");
         }
     }
 
     private void validateAddress(String address) {
         if (!VALID_ADDRESSES.contains(address)) {
-            log.error("Invalid address provided: {}", address + " It must be one of the following: " + VALID_ADDRESSES);
+            log.error("Invalid address provided: {} It must be one of the following: {}", address, VALID_ADDRESSES);
             throw new IllegalArgumentException("Invalid address");
         }
-    }
-
-    @Override
-    public String toString() {
-        return String.format("User{name='%s', age=%d, job='%s', address='%s'}", name, age, job, address);
     }
 }
